src/retrieveCodeoutput/unpackaged/objects/Course__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Creating</fullName>
                </value>
                <value>
                    <fullName>Reviewing</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Type__c</fullName>
        <label>Course Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_registered__c</fullName>
        <label>Number registered</label>
        <summaryForeignKey>Contact_Course__c.Course__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <label>Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ready_for_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Details</fullName>
                    <default>true</default>
                    <label>Details</label>
                </value>
                <value>
                    <fullName>Visibility</fullName>
                </value>
                <value>
                    <fullName>Reviewing</fullName>
                </value>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Retire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trending__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Trending</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Visible_To__c</fullName>
        <defaultValue>&quot;Individual Contributor&quot;</defaultValue>
        <label>Visible To</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Course_Roles</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>fieldName__c</fullName>
        <label>fieldName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Provider__c</columns>
        <columns>Number_registered__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved_Courses</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Provider__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Mine</filterScope>
        <label>Approved Courses</label>
    </listViews>
    <listViews>
        <fullName>Course_Details</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Number_registered__c</columns>
        <columns>Trending__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Mine</filterScope>
        <label>Trending Courses</label>
    </listViews>
    <listViews>
        <fullName>Course_Queue_Course</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Provider__c</columns>
        <filterScope>Queue</filterScope>
        <label>Course Queue</label>
        <queue>Course_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Courses_under_review</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Provider__c</columns>
        <filterScope>Mine</filterScope>
        <label>Courses under review</label>
    </listViews>
    <listViews>
        <fullName>Rejected_Courses</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Provider__c</columns>
        <filterScope>Mine</filterScope>
        <label>Rejected Courses</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Course Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <recordTypes>
        <fullName>Approved</fullName>
        <active>true</active>
        <label>Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>Create</fullName>
        <active>true</active>
        <label>Create</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rejected</fullName>
        <active>true</active>
        <label>Rejected</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retired</fullName>
        <active>true</active>
        <label>Retired</label>
    </recordTypes>
    <recordTypes>
        <fullName>Review</fullName>
        <active>true</active>
        <label>Review</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>